Commented mongo settings

--- a/utility-service/application.yml
+++ b/utility-service/application.yml
@@ -4,8 +4,8 @@ spring:
     job:
       enabled: false
 
-  data:
-    mongodb:
-      uri: mongodb://localhost
-      port: 27017
-      database: library
+#  data:
+#    mongodb:
+#      uri: mongodb://localhost
+#      port: 27017
+#      database: library
